manifests/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: backend-port
  selector:
    app: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: knighthacks/backend
          ports:
            - containerPort: 5000
              name: backend-port
  selector:
    matchLabels:
      app: backend
